--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 language: python
 python:
-  - "3.3"
-  - "3.4"
   - "3.5"
   - "3.5-dev"  # 3.5 development branch
   - "3.6"
@@ -11,5 +9,5 @@ python:
 install:
   - pip install numpy numba batman-package scipy tqdm argparse kplr astroquery
 # command to run tests
-#script:
-#  - pytest
+script:
+  - python tests.py
