--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ matrix:
       dist: xenial
       sudo: true
 install:
-  - pip install scipy
+  - pip install scipy  # only needed for tests
 script:
-  - python setup.py install
+  - python setup.py install  # includes its dependencies
   - cd transitleastsquares/tests
   - bash run_tests.sh
