--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,14 @@ python:
   - 3.5
   - 3.6
 # Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
+os:
+  - linux
+  - osx
+  - windows
 matrix:
   include:
-    - python: 3.7
+    - os: linux
+      python: 3.7
       dist: xenial
       sudo: true
 install:
