--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,9 @@ python:
   - 2.7
   - 3.5
 # Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
-os:
-  - linux
 matrix:
   include:
-    - os: linux
-      python: 3.7
+    - python: 3.7
       dist: xenial
       sudo: true
 install:
